@@ -66,6 +66,11 @@ void very_big_function (void)
 
 #endif
 
+/* ???: GCC 4.6.2 produces this warning about volatile (!) variable.	*/
+#if	(__GNUC__ > 4 || (__GNUC__ == 4 && __GNUC_MINOR__ >= 6))
+# pragma GCC diagnostic ignored "-Wunused-but-set-variable"
+#endif
+
 int main ()
 {
     volatile unsigned long vsi = 0;
